cluster/apps/home-monitoring/nut/rendered.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.config.kubernetes.io/previousKinds: Service
    internal.config.kubernetes.io/previousNames: nut-network-ups-tools
    internal.config.kubernetes.io/previousNamespaces: default
  labels:
    app.kubernetes.io/instance: nut
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: network-ups-tools
    app.kubernetes.io/version: v2.7.4-2479-g86a32237
    helm.sh/chart: network-ups-tools-6.4.2
    helm.toolkit.fluxcd.io/name: nut
    helm.toolkit.fluxcd.io/namespace: ""
  name: nut-network-ups-tools
  namespace: default
spec:
  loadBalancerIP: 10.44.0.13
  ports:
  - name: http
    port: null
    protocol: TCP
    targetPort: http
  - name: server
    port: 3493
    protocol: TCP
    targetPort: server
  selector:
    app.kubernetes.io/instance: nut
    app.kubernetes.io/name: network-ups-tools
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.config.kubernetes.io/previousKinds: Service
    internal.config.kubernetes.io/previousNames: nut-network-ups-tools-metrics
    internal.config.kubernetes.io/previousNamespaces: default
  labels:
    app.kubernetes.io/instance: nut
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: network-ups-tools
    app.kubernetes.io/version: v2.7.4-2479-g86a32237
    helm.sh/chart: network-ups-tools-6.4.2
    helm.toolkit.fluxcd.io/name: nut
    helm.toolkit.fluxcd.io/namespace: ""
  name: nut-network-ups-tools-metrics
  namespace: default
spec:
  ports:
  - name: metrics
    port: 9995
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: nut
    app.kubernetes.io/name: network-ups-tools
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    internal.config.kubernetes.io/previousKinds: Deployment
    internal.config.kubernetes.io/previousNames: nut-network-ups-tools
    internal.config.kubernetes.io/previousNamespaces: default
  labels:
    app.kubernetes.io/instance: nut
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: network-ups-tools
    app.kubernetes.io/version: v2.7.4-2479-g86a32237
    helm.sh/chart: network-ups-tools-6.4.2
    helm.toolkit.fluxcd.io/name: nut
    helm.toolkit.fluxcd.io/namespace: ""
  name: nut-network-ups-tools
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: nut
      app.kubernetes.io/name: network-ups-tools
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nut
        app.kubernetes.io/name: network-ups-tools
    spec:
      automountServiceAccountToken: true
      containers:
      - image: ghcr.io/k8s-at-home/network-ups-tools:v2.7.4-2479-g86a32237
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: <nil>
          timeoutSeconds: 1
        name: nut-network-ups-tools
        ports:
        - containerPort: null
          name: http
          protocol: TCP
        - containerPort: 3493
          name: server
          protocol: TCP
        - containerPort: 9995
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: <nil>
          timeoutSeconds: 1
        securityContext:
          privileged: true
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: <nil>
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /etc/nut
          name: nut-config
        - mountPath: /dev/bus/usb/002/003
          name: ups
      - env:
        - name: HTTP_PORT
          value: "9995"
        - name: HTTP_PATH
          value: /metrics
        - name: RUST_LOG
          value: info
        image: hon95/prometheus-nut-exporter:1.1.1
        imagePullPolicy: IfNotPresent
        name: exporter
        ports:
        - containerPort: 9995
          name: metrics
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: default
      volumes:
      - configMap:
          defaultMode: 256
          name: nut-network-ups-tools-config
          optional: true
        name: nut-config
      - hostPath:
          path: /dev/bus/usb/002/003
        name: ups
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    internal.config.kubernetes.io/previousKinds: Ingress
    internal.config.kubernetes.io/previousNames: nut-network-ups-tools
    internal.config.kubernetes.io/previousNamespaces: default
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-forward-auth@kubernetescrd
  labels:
    app.kubernetes.io/instance: nut
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: network-ups-tools
    app.kubernetes.io/version: v2.7.4-2479-g86a32237
    helm.sh/chart: network-ups-tools-6.4.2
    helm.toolkit.fluxcd.io/name: nut
    helm.toolkit.fluxcd.io/namespace: ""
  name: nut-network-ups-tools
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: nut.
    http:
      paths:
      - backend:
          service:
            name: nut-network-ups-tools
            port:
              number: null
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nut.
    secretName: nut--tls
